<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".AppointmentActivity"
    android:background="#FFFFFF">


    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#183E9F"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/Back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:contentDescription="Back Button"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="12dp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Patient Details"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:textAlignment="center"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/top1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/ivDoctorProfile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/img_10"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_corner_bg"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dr. Devaraj Eye Hospital"
                android:textColor="#000000"
                android:textSize="14sp"
                android:fontFamily="@font/poppinssemibold"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/docname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dr_devaraj_m"
                android:textColor="#000000"
                android:textSize="14sp"
                android:fontFamily="@font/poppinssemibold" />

            <TextView
                android:id="@+id/specialist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ophthalmologist/Eye Surgeon 14 years experience overall"
                android:textColor="#6D6D6D"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="★★★★★ 45 reviews"
                android:textColor="#FF5733"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/tvConsultationFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="₹500 Consultation Fees"
                android:textSize="12sp"
                android:textColor="#000000"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <Button
            android:id="@+id/btnChangeDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change"
            android:textSize="12sp"
            android:textColor="#183E9F"
            android:backgroundTint="#E0E0E0"
            android:padding="4dp"
            tools:ignore="HardcodedText" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationZ="15dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="15dp"
        app:cardElevation="12dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/top1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:translationZ="12dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Patient Name"
                    android:textColorHint="#181515"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="#64EBB6"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:hintTextColor="#183E9F"
                    tools:ignore="HardcodedText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/patient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:translationZ="12dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="10dp"
                app:cardUseCompatPadding="true">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number"
                    android:textColorHint="#0B0A0A"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="#64EBB6"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:hintTextColor="#183E9F">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/patientPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:translationZ="12dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="10dp"
                app:cardUseCompatPadding="true">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:textColorHint="#141212"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="#64EBB6"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:hintTextColor="#183E9F">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textAutoCorrect"
                        android:textColor="@color/black"
                        android:textColorHint="#000000"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:translationZ="12dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="10dp"
                app:cardUseCompatPadding="true">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:textColorHint="#100F0F"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="#64EBB6"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:hintTextColor="#183E9F">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text|textMultiLine"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnProceedToPayment"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#64EBB6"
                android:text="@string/proceed_to_payment"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
